--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 	<main>
 		<section>
-			<h1 class="title">Привіт, мене звати Ліля і ось невеличка інформація про мене:</h1>
+			<h1 class="title">Привіт, мене звати Лілія і ось невеличка інформація про мене:</h1>
 			<ul class="hero-text text">
 				<li>Мені 18 років;</li>
-				<li>Навчаюся в Інституті Спеціального Зв'язку та Захисту Інформації на 2 курсі;</li>
-				<li>Дуже обожнюю займатися спортом.</li>
+				<li>Началась в ВОЛзПВФП ім. Героїв Небесної Сотні ;</li>
+				<li>Люблю спорт. </li>
 			</ul>
 		</section>
 
@@ -59,7 +59,7 @@
 				Фотографія допомогає мені бачити світ з іншої перспективи та насолоджуватися його красою в повному
 				обсязі
 			</p>
-			<img class="second-section-image" src="./img/image4.jpg" alt="Театр" width="374" height="640">
+			<img class="second-section-image" src="./img/image4.jpg" alt="Театр" width="375" height="640">
 			<img class="second-section-image" src="./img/image5.jpg" alt="Пам'ятник" width="375" height="640">
 			<img class="second-section-image" src="./img/image6.jpg" alt="Театр" width="375" height="640">
 		</section>
