--- a/index.html
+++ b/index.html
@@ -4,70 +4,89 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Моє хоббі</title>
-	<link rel="stylesheet" href="styles.css">
+	<title>Forms</title>
+	<style>
+		form.form-example {
+			display: table;
+			margin: 100px auto 0 auto;
+		}
+
+		div.form-example.form-submit {
+			display: table-row;
+		}
+
+		label,
+		input {
+			display: table-cell;
+			margin-bottom: 10px;
+		}
+
+		label {
+			font-size: 18px;
+			padding-right: 10px;
+		}
+
+		.form-submit {
+			text-align: center;
+		}
+
+		.submit {
+			padding: 10px;
+			border: none;
+			border-radius: 10px;
+			background-color: rgb(115, 115, 242);
+			font-size: 18px;
+			font-weight: 800;
+			color: #ffffff;
+		}
+
+		.input-st {
+			border: 2px solid black;
+			background-color: antiquewhite;
+			border-radius: 5px;
+		}
+	</style>
 </head>
 
 <body>
-	<header class="header">
-		<nav class="navigation">
-			<ul class="navigation-list">
-				<li class="list-item">
-					<a href="#myhobby" class="list-link">Моє хоббі</a>
-				</li>
-				<li class="list-item">
-					<a href="#advantages" class="list-link">Переваги</a>
-				</li>
-				<li class="list-item">
-					<a href="#conclusion" class="list-link">Маленький висновок</a>
-				</li>
-			</ul>
-		</nav>
-	</header>
+	<form name="form" action="javascript:completeAndRedirect();" method="get" class="form-example">
+		<div class="name form-example">
+			<label for="name">
+				Enter your name:
+			</label>
+			<input class="input-st" type="text" name="name" id="name" required>
+		</div>
+		<div class="surname form-example">
+			<label for="surname">
+				Enter your surname:
+			</label>
+			<input class="input-st" type="text" name="surname" id="surname" required>
+		</div>
+		<div class="email form-example">
+			<label for="email">
+				Enter your email:
+			</label>
+			<input class="input-st" type="email" name="email" id="email" required>
+		</div>
+		<div class="password form-example">
+			<label for="password">
+				Enter your password:
+			</label>
+			<input class="input-st" type="password" name="password" id="password" required>
+		</div>
+		<div class="form-submit">
+			<input class="submit" type="submit" value="Send">
+		</div>
+	</form>
 
-	<main>
-		<section>
-			<h1 class="title">Привіт, мене звати Лілія і ось невеличка інформація про мене:</h1>
-			<ul class="hero-text text">
-				<li>Мені 18 років;</li>
-				<li>Началась в ВОЛзПВФП ім. Героїв Небесної Сотні ;</li>
-				<li>Люблю спорт. </li>
-			</ul>
-		</section>
+	<p id="text"></p>
 
-		<section class="gray-bg" id="myhobby">
-			<h2 class="title">Моє хоббі - це фотографія</h2>
-			<p class="text">Я завжди намагаюся зафіксувати найкращі моменти життя на камеру.</p>
-		</section>
-
-		<section id="advantages">
-			<h2 class="title">Переваги</h2>
-			<p class="text">Я віддаю перевагу природі та пейзажам, часто вирушаю в подорожі, щоб знайти нові красиві
-				місця для
-				фотографування.
-				Редагування фотографій також цікаво для мене, і я намагаюся створювати вражаючі оброблені зображення.
-			</p>
-			<img class="second-section-image" src="./img/image1.jpg" alt="Театр" width="374" height="640">
-			<img class="second-section-image" src="./img/image2.jpg" alt="Пам'ятник" width="375" height="640">
-			<img class="second-section-image" src="./img/image3.jpg" alt="Театр" width="375" height="640">
-		</section>
-
-		<section id="conclusion">
-			<h2 class="second-title title">Маленький висновок</h2>
-			<p class="text">Мої фотографії часто стають способом виразу для мене, і я ділюся ними в соціальних мережах
-				та з друзями.
-				Фотографія допомогає мені бачити світ з іншої перспективи та насолоджуватися його красою в повному
-				обсязі
-			</p>
-			<img class="second-section-image" src="./img/image4.jpg" alt="Театр" width="375" height="640">
-			<img class="second-section-image" src="./img/image5.jpg" alt="Пам'ятник" width="375" height="640">
-			<img class="second-section-image" src="./img/image6.jpg" alt="Театр" width="375" height="640">
-		</section>
-	</main>
-
-	<footer>
-		<h3 class="title">Дякую за увагу!</h3>
-	</footer>
+	<script>
+		function completeAndRedirect() {
+			var form = document.forms['form'];
+			text.innerHTML = "The data you provided: <br> Your name: " + form.elements.name.value + "<br> Your surname: " + form.elements.surname.value + "<br> Your Email: " + form.elements.email.value + "<br> Your Password: " + form.elements.password.value;
+		}
+	</script>
 </body>
 
 </html>
